--- a/bozzmail/package.json
+++ b/bozzmail/package.json
@@ -14,13 +14,14 @@
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.10.0",
     "formik": "^2.4.6",
+    "moment": "^2.30.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.6.3",
-    "react-tooltip": "^5.29.1",
     "react-toastify": "^11.0.5",
+    "react-tooltip": "^5.29.1",
     "tailwindcss": "^4.1.11",
     "vite": "^7.0.2",
     "yup": "^1.6.1"
